src/_includes/style.css
:root {
  --color-bg: hsl(279, 19%, 93%);
  --color-fg: #211000;
  --color-contrast-fg: #211000;
  --color-contrast-bg: #211000;

  --stack-spacing: 2rem;
  --spacing: 2rem;

  --color-accent-1: hsl(150, 90%, 70%);
  --color-accent-1-contrast: hsl(150, 30%, 40%);
  --color-accent-2: hsl(250, 100%, 80%);
  --color-accent-2-contrast: hsl(250, 30%, 40%);
  --color-accent-3: hsl(300, 100%, 90%);
  --color-accent-3-contrast: hsl(300, 20%, 50%);
  --color-accent-4: hsl(350, 100%, 70%);
  --color-accent-4-contrast: hsl(350, 50%, 30%);
  --color-accent-5: hsl(47, 100%, 70%);
  --color-accent-5-contrast: hsl(47, 50%, 40%);

  --color-black: #211000;

  --color-note--info: var(--color-accent-4, red);
  --color-note--info-contrast: var(--color-accent-4-contrast, white);
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font: 14px/1.4 ui-monospace,
    "Cascadia Mono", "Segoe UI Mono",
    "Ubuntu Mono",
    "Roboto Mono",
    Menlo, Monaco, Consolas,
    monospace;
  background: var(--color-bg, #f1f1f1);
  color: #211000;
}

h1,
h2,
h3 {
  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

h1 {
  font-size: 2em;
}

h2,
h3 {
  --color-fg: var(--color-fg);
  text-shadow: .02em .02em 0 var(--color-bg), .03em .03em 0 var(--color-contrast-fg);
}

hr {
  max-width: 80%;
  margin: 0 auto;
  border: none;
  background: var(--color-fg);
  height: 0.05em;
}

.stack *+* {
  margin-top: var(--stack-spacing, 2rem);
}

a {
  color: var(--color-link, hotpink);
  word-break: break-word;
}

a:hover {
  border-bottom: none;
  text-decoration: none;
}

.a-blank,
.a-blank:visited {
  text-decoration: none;
}

.a-blank:hover,
.a-blank:focus {
  border-bottom: .15em solid currentColor;
  font-size: 100%;
  letter-spacing: 0em;
}

.a-splash {
  color: var(--color-fg);
  background: var(--color-bg);
  border-radius: 65% 72% 53% 41%;
  padding: .25em;
  animation: wobble linear 4s infinite;
}

/* Disable animation if reduced motion is set */
@media (prefers-reduced-motion) {
  .a-splash {
    animation: none;
  }
}

@keyframes wobble {
  1% {
    border-radius: 65% 72% 53% 41%;
  }

  25% {
    border-radius: 92% 10% 62% 15%;
  }

  50% {
    border-radius: 18% 92% 21% 39%;
  }

  75% {
    border-radius: 95% 42% 13% 81%;
  }

  100% {
    border-radius: 65% 72% 53% 41%;
  }
}

.anim-typing:after {
  content: "|";
  animation: typing linear 0.3s;
}

@keyframes typing {
  from {
    color: var(--color-fg);
  }

  50% {
    color: var(--color-bg);
  }

  to {
    color: var(--color-fg);
  }
}



/* Accent colors and styles */
.fg-accent-1 {
  --color-fg: var(--color-accent-1, hsl(100, 75%, 90%));
}

.fg-accent-2 {
  --color-fg: var(--color-accent-2, hsl(200, 75%, 90%));
}

.fg-accent-3 {
  --color-fg: var(--color-accent-3, hsl(300, 75%, 90%));
}

.fg-accent-4 {
  --color-fg: var(--color-accent-4, hsl(400, 75%, 90%));
}

[class*="fg-accent"] {
  color: var(--color-fg);
  font-weight: bold;
}

.bg-accent-1 {
  --color-fg: var(--color-accent-1-contrast, #211000);
  --color-bg: var(--color-accent-1, hsl(100, 75%, 90%));
}

.bg-accent-2 {
  --color-fg: var(--color-accent-2-contrast, #211000);
  --color-bg: var(--color-accent-2, hsl(200, 75%, 90%));

  --color-link: white;
}

.bg-accent-3 {
  --color-fg: var(--color-accent-3-contrast, #211000);
  --color-bg: var(--color-accent-3, hsl(300, 75%, 90%));
}

.bg-accent-4 {
  --color-fg: var(--color-accent-4-contrast, #211000);
  --color-bg: var(--color-accent-4, hsl(400, 75%, 90%));
}

.bg-accent-5 {
  --color-fg: var(--color-accent-5-contrast, #fff);
  --color-bg: var(--color-accent-5, #211000);
}

[class*="bg-accent"] {
  color: var(--color-fg, #211000);
  background: var(--color-bg, #fff);
}

ul {
  list-style: none;
  margin-left: var(--stack-spacing);
}

ul li::before {
  content: "✦";
  color: var(--color-fg, #211000);
  display: inline;
  width: 1em;
  margin-left: -1.25em;
  padding-right: .5em;
}

.grid {
  display: grid;
}

.main-grid {
  display: grid;
  grid-template-columns: repeat(12, 1fr);
  grid-column-gap: 1em;
  overflow-x: hidden;
  min-height: 100vh;
}

.gr-1 {
  grid-row: 1;
}

.gr-2 {
  grid-row: 2;
}

.gr-auto {
  grid-row: auto;
}

.gc-full {
  grid-column-start: 1;
  grid-column-end: 12;
}

.gc-8-12 {
  grid-column-start: 8;
  grid-column-end: 12;
}

.gc-1-7 {
  grid-column-start: 1;
  grid-column-end: 7;
}

.d-grid {
  display: grid;
  grid-template-columns: repeat(var(--grid-columns, 3), 1fr);
  grid-gap: var(--stack-spacing, 2rem);
}

ul li {
  margin-top: var(--stack-spacing, 1rem);
}

.c-skill-list__item {
  padding: 1rem;
  font-size: .75em;
}

.about {
  grid-column-start: 5;
  grid-column-end: 12;
  grid-row: 2;
}

.c-full-width {
  width: 100vw;
}

.c-full-height {
  min-height: 100vh;
}

hgroup {
  margin-bottom: calc(var(--stack-spacing, 2rem) * 2);
}

.f-ultra>* {
  font-size: 2.75em;
}

.f-heading-big {
  font-size: 3em;
  color: var(--color-fg, #211000);
}

.f-small {
  font-size: 1rem;
}

section {
  padding: var(--spacing, 2rem);
}

.section__styled {
  margin-bottom: var(--spacing, 2rem);
}

.box-shadow__styled {
  --c1: var(--color-fg, --box-shadow-color);

  box-shadow: -1rem -1rem 0 var(--c1);
  border: .25rem solid var(--c1);
}

.single-page {
  font-size: .75em;
  background: #fff;
  padding: 4rem;
  margin: 4rem auto;
  max-width: 75rem;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

.single-page img {
  max-width: 100%;
}

.article-list {
  font-size: .75em;
  max-width: 75rem;
  margin: 0 auto;
}

.article-list--inline {
  --box-shadow-color: black;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 100%;
  max-width: 100%;
  font-size: 80%;
}

.article-list--inline>.article-list__item {
  margin: var(--spacing, 2rem);
  width: 95%;
}

.article-list__item>h2 {
  text-shadow: none;
}

.article-list__more-link {
  display: inline-block;
  margin-top: var(--spacing);
}

.article-list__item {
  margin: 2rem 0;
  background: #fff;
  padding: calc(var(--spacing) * 2)
}

.site-nav {
  width: 100%;
  padding: 2rem;
  font-size: 2rem;
  background: black;
}

.site-nav__wrapper {
  padding: 0;
}

.animation-spin {
  transition: all linear .7s;
  display: inline-block;
}

.animation-spin:hover {
  transform: rotate(360deg);
}


@media all and (max-width: 2000px) {
  .about {
    grid-column-start: 3;
    grid-column-end: 13;
    max-width: 60vw;
    min-width: 60rem;
  }
}

.footer {
  background: var(--color-fg);
  color: var(--color-bg);
  padding: var(--spacing, 2rem);
}

/* Only on BIG screens we want this */
@media all and (min-width: 1800px) {
  .article-list--inline {
    flex-direction: row;
  }

  .article-list--inline>.article-list__item {
    width: 33%;
  }
}

@media all and (min-width: 1000px) {
  .section__styled {
    margin: calc(var(--spacing, 2rem) * 2) 0;
    padding-right: calc(var(--spacing, 2rem) * 2);

    max-width: calc(100% - calc(var(--spacing, 2rem) * 3));
  }


  section[id].section__styled {
    max-width: calc(100vw - 8rem);
    margin: var(--spacing, 2rem);
  }
}

@media all and (max-width: 1200px) {
  body {
    font-size: 10px;
  }

  .f-heading-big {
    font-size: 2.5rem;
  }

  .f-ultra>* {
    font-size: 1.5rem;
  }

  .c-skill-list__item {
    padding: 0;
    margin-top: 0;
  }

  section {
    padding: 2rem;
  }

  .start>* {
    max-width: 90vw;
  }

  .start h2 {
    font-size: 2rem;
  }

  .start img {
    max-width: 100%;
  }

  .about,
  .avatar {
    width: 100%;
    min-width: 100%;
  }

  .bg-accent-3 {
    text-shadow: none;
  }

  .about {
    grid-column-start: 1;
    grid-column-end: 13;
    background: var(--color-contrast-bg);
  }

  .c-skill-list {
    grid-template-columns: 1fr;
  }

  .grid {
    grid-template-columns: 1fr;
    grid-template-rows: 1fr;
  }

  .grid>* {
    grid-column: auto;
    grid-row: auto;
  }
}

